# canteen

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
canteen_management/: api.py  canteen_stock_entry_hooks.py  employee_hooks.py  hooks.py  modules.txt  patches.txt  pos_invoice_hooks.py  setup.py  setup_pos.py  tasks.py  utils.py
canteen_management/canteen_management/: __init__.py  api.py  api.py.bak  hooks.py  setup.py  utils.py
canteen_management/canteen_management/fixtures/: workspace.json
canteen_management/config/: __init__.py  desktop.py  docs.py
canteen_management/doctype/canteen_category/: canteen_category.json  canteen_category.py
canteen_management/doctype/canteen_inventory/: canteen_inventory.json  canteen_inventory.py
canteen_management/doctype/canteen_invoice/: canteen_invoice.py
canteen_management/doctype/canteen_invoice_item/: canteen_invoice_item.json
canteen_management/doctype/canteen_item/: canteen_item.py
canteen_management/doctype/canteen_order/: canteen_order.json  canteen_order.py
canteen_management/doctype/canteen_order_item/: canteen_order_item.py
canteen_management/doctype/canteen_payment_mode/: canteen_payment_mode.json  canteen_payment_mode.py
canteen_management/doctype/canteen_settings/: canteen_settings.json  canteen_settings.py
canteen_management/doctype/canteen_shift/: canteen_shift.py
canteen_management/fixtures/: custom_field.json  workspace.json
canteen_management/patches/: __init__.py
canteen_management/patches/v1_0/: __init__.py  (+1 more)
canteen_management/templates/: __init__.py  invoice.html
(+53 files in other folders)
